# ndoto

./: Cargo.toml  README.md
DOCS/architecture/: technical-foundation.md
crates/ndoto_engine/: Cargo.toml
crates/ndoto_engine/src/: app.rs  lib.rs  physics_backend.rs
crates/ndoto_framework/: Cargo.toml
crates/ndoto_framework/src/: dimension.rs  input.rs  lib.rs  movement.rs  physics.rs
crates/ndoto_game/: Cargo.toml
crates/ndoto_game/src/: dev_capture.rs  lib.rs
crates/ndoto_game/src/prototype/: mod.rs
crates/ndoto_game/src/prototype/rendering/: camera.rs  mod.rs  scene.rs
crates/ndoto_game/src/prototype/time/: history.rs  mod.rs  systems.rs
src/: main.rs
src/rendering/: camera.rs  mod.rs  scene.rs
src/time/: history.rs  mod.rs  systems.rs
