[workspace]
members = ["crates/ndoto_engine", "crates/ndoto_framework", "crates/ndoto_game"]

[workspace.dependencies]
bevy = "0.18.1"

[package]
name = "ndoto"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
ndoto_game = { path = "crates/ndoto_game" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
